; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ui/extr_ui_lib.c_UI_dup_user_data.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ui/extr_ui_lib.c_UI_dup_user_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i8* (%struct.TYPE_7__*, i8*)*, i32* }

@UI_F_UI_DUP_USER_DATA = common dso_local global i32 0, align 4
@UI_R_USER_DATA_DUPLICATION_UNSUPPORTED = common dso_local global i32 0, align 4
@ERR_R_MALLOC_FAILURE = common dso_local global i32 0, align 4
@UI_FLAG_DUPL_DATA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @UI_dup_user_data(%struct.TYPE_7__* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* null, i8** %6, align 8
  %7 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 1
  %9 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 0
  %11 = load i8* (%struct.TYPE_7__*, i8*)*, i8* (%struct.TYPE_7__*, i8*)** %10, align 8
  %12 = icmp eq i8* (%struct.TYPE_7__*, i8*)* %11, null
  br i1 %12, label %20, label %13

13:                                               ; preds = %2
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 1
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 1
  %18 = load i32*, i32** %17, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %20, label %24

20:                                               ; preds = %13, %2
  %21 = load i32, i32* @UI_F_UI_DUP_USER_DATA, align 4
  %22 = load i32, i32* @UI_R_USER_DATA_DUPLICATION_UNSUPPORTED, align 4
  %23 = call i32 @UIerr(i32 %21, i32 %22)
  store i32 -1, i32* %3, align 4
  br label %48

24:                                               ; preds = %13
  %25 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %25, i32 0, i32 1
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 0
  %29 = load i8* (%struct.TYPE_7__*, i8*)*, i8* (%struct.TYPE_7__*, i8*)** %28, align 8
  %30 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %31 = load i8*, i8** %5, align 8
  %32 = call i8* %29(%struct.TYPE_7__* %30, i8* %31)
  store i8* %32, i8** %6, align 8
  %33 = load i8*, i8** %6, align 8
  %34 = icmp eq i8* %33, null
  br i1 %34, label %35, label %39

35:                                               ; preds = %24
  %36 = load i32, i32* @UI_F_UI_DUP_USER_DATA, align 4
  %37 = load i32, i32* @ERR_R_MALLOC_FAILURE, align 4
  %38 = call i32 @UIerr(i32 %36, i32 %37)
  store i32 -1, i32* %3, align 4
  br label %48

39:                                               ; preds = %24
  %40 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %41 = load i8*, i8** %6, align 8
  %42 = call i32 @UI_add_user_data(%struct.TYPE_7__* %40, i8* %41)
  %43 = load i32, i32* @UI_FLAG_DUPL_DATA, align 4
  %44 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %45 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 8
  %47 = or i32 %46, %43
  store i32 %47, i32* %45, align 8
  store i32 0, i32* %3, align 4
  br label %48

48:                                               ; preds = %39, %35, %20
  %49 = load i32, i32* %3, align 4
  ret i32 %49
}

declare dso_local i32 @UIerr(i32, i32) #1

declare dso_local i32 @UI_add_user_data(%struct.TYPE_7__*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
